[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/sprites/layout/gladstone/WallFrontDefault.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/layout/gladstone/wallSideDefault.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/layout/gladstone/wallSideDefaultU.png" type="Texture" id=3]
[ext_resource path="res://layout/Viewport.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/layout/gladstone/WallFrontDefaultUU.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/layout/gladstone/WallFrontDefaultU.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/layout/gladstone/wallSideDefaultUU.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/layout/gladstone/wallSideDefaultUUS.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/layout/gladstone/wallSideDefaultUUU.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/layout/gladstone/floor.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/layout/gladstone/Ceiling.png" type="Texture" id=16]

[node name="Viewport" type="Control"]
show_behind_parent = true
margin_right = 176.0
margin_bottom = 120.0
rect_clip_content = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bg" type="ColorRect" parent="."]
margin_right = 176.0
margin_bottom = 120.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ceiling" type="Sprite" parent="."]
texture = ExtResource( 16 )
centered = false

[node name="Floor" type="Sprite" parent="."]
position = Vector2( 0, 64 )
texture = ExtResource( 15 )
centered = false

[node name="Walls" type="Node2D" parent="."]

[node name="WallLeftUUU" type="Sprite" parent="Walls"]
visible = false
position = Vector2( 64, 28 )
texture = ExtResource( 9 )
centered = false

[node name="WallRightUUU" type="Sprite" parent="Walls"]
visible = false
position = Vector2( 104, 28 )
texture = ExtResource( 9 )
centered = false
flip_h = true

[node name="WallFrontUULL" type="Sprite" parent="Walls"]
visible = false
position = Vector2( -8, 46 )
texture = ExtResource( 5 )

[node name="WallLeftUUL" type="Sprite" parent="Walls"]
visible = false
position = Vector2( 8, 47 )
texture = ExtResource( 8 )

[node name="WallFrontUUL" type="Sprite" parent="Walls"]
visible = false
position = Vector2( 16, 27 )
texture = ExtResource( 5 )
centered = false

[node name="WallFrontUU" type="Sprite" parent="Walls"]
visible = false
position = Vector2( 64, 27 )
texture = ExtResource( 5 )
centered = false

[node name="WallFrontUUR" type="Sprite" parent="Walls"]
visible = false
position = Vector2( 112, 27 )
texture = ExtResource( 5 )
centered = false

[node name="WallRightUUR" type="Sprite" parent="Walls"]
visible = false
position = Vector2( 168, 47 )
texture = ExtResource( 8 )
flip_h = true

[node name="WallFrontUURR" type="Sprite" parent="Walls"]
visible = false
position = Vector2( 184, 46 )
texture = ExtResource( 5 )

[node name="WallLeftUU" type="Sprite" parent="Walls"]
visible = false
position = Vector2( 48, 20 )
texture = ExtResource( 7 )
centered = false

[node name="WallRightUU" type="Sprite" parent="Walls"]
visible = false
position = Vector2( 112, 20 )
texture = ExtResource( 7 )
centered = false
flip_h = true

[node name="WallFrontU" type="Sprite" parent="Walls"]
visible = false
position = Vector2( 48, 20 )
texture = ExtResource( 6 )
centered = false

[node name="WallFrontUL" type="Sprite" parent="Walls"]
visible = false
position = Vector2( -32, 20 )
texture = ExtResource( 6 )
centered = false

[node name="WallFrontUR" type="Sprite" parent="Walls"]
visible = false
position = Vector2( 128, 20 )
texture = ExtResource( 6 )
centered = false

[node name="WallLeftU" type="Sprite" parent="Walls"]
visible = false
position = Vector2( 24, 8 )
texture = ExtResource( 3 )
centered = false

[node name="WallRightU" type="Sprite" parent="Walls"]
visible = false
position = Vector2( 128, 8 )
texture = ExtResource( 3 )
centered = false
flip_h = true

[node name="WallFrontL" type="Sprite" parent="Walls"]
visible = false
position = Vector2( -104, 8 )
texture = ExtResource( 1 )
centered = false

[node name="WallFrontR" type="Sprite" parent="Walls"]
visible = false
position = Vector2( 152, 8 )
texture = ExtResource( 1 )
centered = false

[node name="WallFront" type="Sprite" parent="Walls"]
visible = false
position = Vector2( 24, 8 )
texture = ExtResource( 1 )
centered = false

[node name="WallLeft" type="Sprite" parent="Walls"]
visible = false
texture = ExtResource( 2 )
centered = false

[node name="WallRight" type="Sprite" parent="Walls"]
visible = false
position = Vector2( 152, 0 )
texture = ExtResource( 2 )
centered = false
flip_h = true
